--- a/Tomato/Content/Site.css
+++ b/Tomato/Content/Site.css
@@ -46,7 +46,10 @@ input[type="checkbox"].input-validation-error {
 /* gridster
 /*/
 
-
+.gridster svg {
+    width: 100%;
+    height: 100%;
+}
 
 .gridster ul {
     background-color: #EFEFEF;
