--- a/Tomato/Views/Home/Index.cshtml
+++ b/Tomato/Views/Home/Index.cshtml
@@ -16,6 +16,12 @@
 @section scripts{
     <script type="text/javascript" src="~/Scripts/addtogrid.js"></script>
     <script type="text/javascript" src="~/Scripts/gridster.js"></script>
+    <script type="text/javascript" src="~/Scripts/table.js"></script>
+    <script type="text/javascript" src="~/Scripts/scatter.js"></script>
+    <script type="text/javascript" src="~/Scripts/brush.js"></script>
+    <script type="text/javascript" src="~/Scripts/histogram.js"></script>
+    <script type="text/javascript" src="~/Scripts/addtomatochart.js"></script>
+    <script type="text/javascript" src="~/Scripts/addcirclechart.js"></script>
     <script type="text/javascript">
         //all variables has to declared here
         var gridster;
@@ -26,8 +32,10 @@
             url: '@Url.Action("PullHot", "Home")',
             data: { tag: $('#tag').val(), page: window.hotpage },
             type: 'POST',
-            success: addCircleChart
+            success: addTomatoChart
         });
+
+      
 
         $(function() {
             $('#addChart').click(function(e) {
