--- a/Tomato/Views/Home/Graphs.cshtml
+++ b/Tomato/Views/Home/Graphs.cshtml
@@ -1,7 +1,23 @@
-﻿@model dynamic
+﻿@model string
 
 @{
     ViewBag.Title = "charts";
+
 }
 
 <h2>charts</h2>
+
+
+@section scripts{
+    <script type="text/javascript" src="~/Scripts/addtogrid.js"></script>
+    <script type="text/javascript" src="~/Scripts/gridster.js"></script>
+    <script type="text/javascript" src="~/Scripts/table.js"></script>
+    <script type="text/javascript" src="~/Scripts/scatter.js"></script>
+    <script type="text/javascript" src="~/Scripts/brush.js"></script>
+    <script type="text/javascript" src="~/Scripts/histogram.js"></script>
+    <!--<script type="text/javascript" src="~/Scripts/addtomatochart.js"></script>-->
+    <!--<<script type="text/javascript" src="~/Scripts/addcirclechart.js"></script>-->
+    <script type="text/javascript">
+    	
+    </script>
+}
